# rag-indexer

./: ARCHITECTURE_SUMMARY.txt  CHARTER.md  DELIVERABLES.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  INTEGRATION.md  USER_GUIDE.md
examples/: basic_usage.py
rag_indexer/: __init__.py  chunker.py  config.py  indexer.py  retriever.py
tests/: conftest.py  test_chunker.py  test_config.py  test_indexer.py  test_integration.py  test_retriever.py
