[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-indexer"
version = "1.0.0"
description = "Retrieval-Augmented Generation Indexing for equilibrium-tokens"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "equilibrium-tokens", email = "dev@equilibrium-tokens.org"},
]
keywords = ["rag", "retrieval", "indexing", "vector-search", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
    "embeddings-engine>=1.0.0",
    "vector-navigator>=1.0.0",
    "scikit-learn>=1.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/equilibrium-tokens/rag-indexer"
Documentation = "https://github.com/equilibrium-tokens/rag-indexer/docs"
Repository = "https://github.com/equilibrium-tokens/rag-indexer"
Issues = "https://github.com/equilibrium-tokens/rag-indexer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_indexer*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rag_indexer --cov-report=term-missing"
